# app-concepts

./: Makefile.am  README.md  configure.ac
src/core/: iportal.c  iportald.c  org.example.Portal.Manager.xml
src/demo/: idemo-app-main.c  idemo-app.c  idemo-app.h
src/include/: iportal.h
src/sandbox/: sandbox.c
